tests/ui/fail/missing-resource/l10n/fr/settings.ftl
font-color = Couleur de la police
